# legged-robot-RL

./: .gitignore  CONSTRAINED_PPO_DETAILS.md  DOCS_INDEX.md  MJDATA.TXT  MUJOCO_LOG.TXT  QUICK_REFERENCE.md  README.md  README_THEORY_DOCS.md  TRAINING_THEORY.md  exp_draw.py  export_onnx.py  global_config.py  model_0324.onnx  model_03241.onnx  model_0325.onnx  model_8000.onnx  modelt_0201.onnx  modify_stand_cfg.py  modify_trot_cfg.py  play.py  pt2onnx.py  pt2tvm.py  sim2sim_taitan.py  sim2sim_tinker.py  sim2sim_tinymal.py  standing_stable.onnx  sync_stand_from_trot.py  test_cfg.py  test_contact_order.py  test_height.py  test_height2.py  test_height3.py  test_height_dist.py  test_height_full.py  train.py  update1.sh  update2.sh  update_plan.txt
algorithm/: np3o.py
back_sim2sim/: sim2sim_tinker_udp.py  sim2sim_tinymal_lcm.py  sim2sim_tinymal_udp.py
configs/: __init__.py  go2_constraint_him.py  legged_robot_config.py  tinker_constraint_him_stand.py  tinker_constraint_him_trot.py  tinymal_constraint_him_stand.py  tinymal_constraint_him_trot.py
configs/back/: taitan_constraint_him copy.py  taitan_constraint_him.py  tinker_constraint_him.py
envs/: __init__.py  humanoid_utils.py  legged_robot.py
envs/back/: legged_robot stand.py
modules/: actor_critic.py
resources/TinkerV2_URDF/: CMakeLists.txt  package.xml
resources/TinkerV2_URDF/config/: joint_names_TinkerV2_URDF.yaml
resources/TinkerV2_URDF/launch/: display.launch  gazebo.launch
resources/TinkerV2_URDF/meshes/: L0_Link.STL  L1_Link.STL  L2_Link.STL  L3_Link.STL  L4_Link_ankle.STL  R0_Link.STL  R1_Link.STL  R2_Link.STL  R3_Link.STL  R4_Link_ankle.STL  base_link.STL
resources/TinkerV2_URDF/urdf/: TinkerV2_URDF.csv  TinkerV2_URDF.urdf
resources/TinkerV2_URDF/xml/: TinkerV2_URDF1.xml  dependencies.xml  scene.xml  tinker.xml  world.xml  (+1 more)
resources/taitan/: CMakeLists.txt  package.xml
resources/tinker/: CMakeLists.txt  package.xml
resources/tinymal/: CMakeLists.txt  package.xml
runner/: on_constraint_policy_runner.py  rollout_storage.py
sim2sim_lcm/: CMakeLists.txt
sim2sim_lcm/include/: Request.hpp  Response.hpp  lcm_publish.h  lcm_service.h  mathTools.h  udp_publish.h  udp_publish_tinker.h
sim2sim_lcm/lcm_types/: request.lcm  response.lcm
sim2sim_lcm/lcm_types/my_lcm/: Request.py  Response.py  __init__.py
sim2sim_lcm/src/: lcm_client.py  lcm_publisher.cpp  lcm_service.cpp  udp_publisher.cpp  udp_publisher_tinker.cpp
sim2sim_lcm/src/back/: lcm_service_rl.cpp
src/leg_mavlink_cpp_bridge/: CMakeLists.txt  package.xml
tools/: clear_log.sh  ethercat.sh  make.sh  pt2tvm.py  py_ui.py  py_xbox.py  py_xbox_yyp.py  run_mujoco.sh  run_rviz.sh  run_test.sh  update_lib.sh
utils/: helpers.py  task_registry.py  terrain.py
wandb/: latest-run
(+60 files in other folders)
